[package]
name = "abes-axe"
version = "0.5.0"
authors = ["Ben Beckwith <bnbeckwith@gmail.com>"]

[lib]
name="abes_axe"
path="src/lib.rs"

[dependencies]
chrono = "0.2.*"
clap = "2.*"
error-chain = "0.7.1"
git2 = "0.6"
itertools = "0.5.8"
pbr = { git = "https://github.com/bnbeckwith/pb" }
rayon = "0.6.0"
regex = "*"
rocket = "0.2.8"
rocket_codegen = "0.2.8"
rocket_contrib = "0.2.8"
futures = "0.1"
parallel-event-emitter = "0.2.4"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"